--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,13 @@
+2007-11-15  Khoo Yit Phang  <khooyp@cs.umd.edu>
+
+        Reviewed by Darin.
+
+        http://bugs.webkit.org/show_bug.cgi?id=15989
+        XPath queries with predicates incorrectly retains the current node across unions
+
+        * fast/xpath/union-context-node-expected.txt: Added.
+        * fast/xpath/union-context-node.xhtml: Added.
+
 2007-11-15  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Darin.
