--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-15  Mark Rowe  <mrowe@apple.com>
+
+        Gtk build fix.
+
+        * WebCore.pro:
+
 2007-11-15  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Darin.
