--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,11 @@
 2007-11-15  Mark Rowe  <mrowe@apple.com>
 
+        Gtk build fix.
+
+        * kjs/Parser.cpp:
+
+2007-11-15  Mark Rowe  <mrowe@apple.com>
+
         Mac build and header search path sanity fix.
 
         Reviewed by Sam Weinig and Tim Hatcher.
