--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-16  Alexey Proskuryakov  <ap@webkit.org>
+
+        Fix Windows debug build.
+        Rubber-stamped by Eric
+
+        * pcre/pcre_exec.cpp: (match): Removed ASSERT_NOT_REACHED assertions that were making MSVC
+        complain about unreachable code.
+
 2007-11-15  Mark Rowe  <mrowe@apple.com>
 
         Gtk build fix.
