Windows build fix.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27861 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,12 @@
 2007-11-16  Mark Rowe  <mrowe@apple.com>
 
+        Windows build fix.
+
+        * kjs/lexer.cpp:
+        (KJS::Lexer::record8):
+
+2007-11-16  Mark Rowe  <mrowe@apple.com>
+
         Reviewed by Eric.
 
         Replace strings, identifier, buffer8 and buffer16 members of Lexer with vectors.
