--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-16  Ryan Leavengood  <leavengood@gmail.com>
+
+        Reviewed by David Kilzer.
+
+        Build fix: the needed headers for POSIX file functions were not
+        included.
+
+        * platform/posix/FileSystemPOSIX.cpp:
+
 2007-11-16  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Darin Adler.
