--- a/WebKit/mac/ChangeLog
+++ b/WebKit/mac/ChangeLog
@@ -1,3 +1,20 @@
+2007-11-17  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Darin.
+
+        http://bugs.webkit.org/show_bug.cgi?id=15969
+        Eliminate Editor::deleteRange()
+
+        * WebView/WebHTMLView.mm:
+        (+[WebHTMLView initialize]):
+        (-[WebHTMLView yank:]):
+        (-[WebHTMLView yankAndSelect:]):
+        (-[WebHTMLView setMark:]):
+        (-[WebHTMLView deleteToMark:]):
+        (-[WebHTMLView selectToMark:]):
+        (-[WebHTMLView swapWithMark:]):
+        Pushed all kill ring methods to WebCore. They were guilty of using Editor::deleteRange()!
+
 2007-11-16  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Tim Hatcher.
