--- a/WebKitSite/ChangeLog
+++ b/WebKitSite/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-17  Adam Roben  <aroben@apple.com>
+
+        Update Windows debugging instructions
+
+        Reviewed by Mark Rowe.
+
+        * building/debug.html:
+
 2007-11-14  Brady Eidson  <beidson@apple.com>
 
         For future use
