--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-18  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Anders.
+
+        Make run-javascriptcore-tests report failures on exit (to support git bisect)
+
+        * Scripts/run-javascriptcore-tests:
+
 2007-11-18  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Adam Roben.
