2007-11-18  Eric Seidel  <eric@webkit.org>
        Reviewed by Oliver.

        * tests/mozilla/jsDriver.pl: exit non-0 when user aborts test run


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27894 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-18  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Oliver.
+
+        * tests/mozilla/jsDriver.pl: exit non-0 when user aborts test run
+
 2007-11-17  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Darin Adler.
