2007-11-19  Kevin Ollivier  <kevino@theolliviers.com>
        Build script fixes to ensure they do the right thing for the
        wx port, and update build-wxwebkit to reflect the way the
        build scripts now work.

        Reviewed by Adam.

        * Scripts/build-testkjs:
        * Scripts/build-webkit:
        * Scripts/run-javascriptcore-tests:
        * Scripts/webkitdirs.pm:
        * wx/build-wxwebkit:

2007-11-19  Kevin Ollivier  <kevino@theolliviers.com>

        Add pcre directory to JSCore includes, and update the wx port
        to reflect the Shared -> RefCounted name change. Also, fix
        WebFrame.cpp to re-enable code that should never have been
        committed disabled.

        Reviewed by Adam.

2007-11-19  Kevin Ollivier  <kevino@theolliviers.com>

        Update wx port build sources with recent changes, update
        wx FontPlatformData to be a class (MSVC7 gets confused
        otherwise...) and implement its hash() method.

        Reviewed by Adam.

        * WebCoreSources.bkl:
        * platform/wx/FontPlatformData.h:
        (WebCore::FontPlatformData::hash):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27899 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,15 @@
+2007-11-19  Kevin Ollivier  <kevino@theolliviers.com>
+
+        Update wx port build sources with recent changes, update
+        wx FontPlatformData to be a class (MSVC7 gets confused
+        otherwise...) and implement its hash() method.
+
+        Reviewed by Adam.
+
+        * WebCoreSources.bkl:
+        * platform/wx/FontPlatformData.h:
+        (WebCore::FontPlatformData::hash):
+
 2007-11-19  Julien Chaffraix  <julien.chaffraix@gmail.com>
 
         Reviewed by Darin.
