--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -1,3 +1,16 @@
+2007-11-19  Adam Treat  <treat@kde.org>
+
+        Reviewed by Simon.
+
+        * Don't segfault when event pos is outside of the widget.
+
+        * Api/qwebpage.cpp:
+        (QWebPage::mouseMoveEvent):
+        (QWebPage::mousePressEvent):
+        (QWebPage::mouseDoubleClickEvent):
+        (QWebPage::mouseReleaseEvent):
+        (QWebPage::contextMenuEvent):
+
 2007-11-17  Timothy Hatcher  <timothy@apple.com>
 
         Reviewed by Mark Rowe.
