--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,22 @@
+2007-11-19  Alp Toker  <alp@atoker.com>
+
+        Reviewed by Mark Rowe.
+
+        GTK+ drawing fixes.
+
+        Add a check to avoid crashing when the GraphicsContext is not
+        associated with a GdkDrawable. This was noticed when adding printing
+        support but might be triggered in other situations too.
+
+        Do not render themes when painting is disabled. This is an
+        optimisation for cases where GraphicsContext is used to calculate page
+        dimensions etc. without actually rendering.
+
+        * platform/graphics/cairo/GraphicsContextCairo.cpp:
+        (WebCore::GraphicsContext::gdkDrawable):
+        * platform/gtk/RenderThemeGtk.cpp:
+        (WebCore::paintMozWidget):
+
 2007-11-13  Rahul Abrol  <ra5ul@comcast.net>
 
         Reviewed by Tim Hatcher.
