--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-19  Kevin Ollivier  <kevino@theolliviers.com>
+
+        wx port build fix.
+
+        * platform/graphics/wx/AffineTransformWx.cpp:
+        (WebCore::AffineTransform::operator== ):
+        m_transform is only available when using wxGraphicsContext.
+
 2007-11-19  Alp Toker  <alp@atoker.com>
 
         Reviewed by Mark Rowe.
