Rubber-stamped by bdash.
        Improve coverage of these tests.

        * media/video-muted-expected.txt:
        * media/video-muted.html:
        * media/video-volume-expected.txt:
        * media/video-volume.html:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27912 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,14 @@
+2007-11-19  Antti Koivisto  <antti@apple.com>
+
+        Rubber-stamped by bdash.
+        
+        Improve coverage of these tests.
+
+        * media/video-muted-expected.txt:
+        * media/video-muted.html:
+        * media/video-volume-expected.txt:
+        * media/video-volume.html:
+
 2007-11-19  Julien Chaffraix  <julien.chaffraix@gmail.com>
 
         Reviewed by Darin.
